# huffman-archiver

./: ArgsProcessing.cpp  ArgsProcessing.h  BitIO.cpp  BitIO.h  CMakeLists.txt  HuffmanCodec.cpp  HuffmanCodec.h  HuffmanTree.cpp  HuffmanTree.h  LeftistHeap.h  README.md  catch.hpp  main.cpp  tests.cpp
